Improve calculator - Format result with spaces, e.g. 1 250 500 instead of 1250500 - If result is over 15 digits long, use scientific notation - Make sure calculation and result don't wrap (stay on one line) - Clean up code

--- a/src/app/calculator/calculators/calculator/calculator.page.scss
+++ b/src/app/calculator/calculators/calculator/calculator.page.scss
@@ -33,13 +33,10 @@
     p {
       margin: 0;
       transition: 0.2s ease-out;
-      outline: none;
-      border: 0;
+      white-space: nowrap;
       -webkit-user-drag: none;
       &.calculation {
         color: var(--ion-color-light-contrast);
-        background-color: transparent;
-        caret-color: var(--ion-color-primary);
         font-size: 7vh;
       }
       &.current-result {
